# blue

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
.quail/: cmake.txt  measure.txt  quail.txt  shared.txt  test.txt
.quail/cmd/: clangset.bat
cmake/: CPM.cmake  properties.cmake
dependencies/: CMakeLists.txt
inc/blue/: bitwise.hpp  cmpxchg16b.hpp  comparesearch.hpp  compilerlog.hpp  debug.hpp  error.hpp  io.hpp  io_types.hpp  log.hpp  lut.hpp  memory.hpp  memory_exit.hpp  sal.hpp  string.hpp  stringcase.hpp  struct.hpp  timestamp.hpp  types.hpp  wave.hpp
inc/blue/instructions/: bswap.hpp  cmpxchg16b.asm  cmpxchg16b.hpp
inc/blue/windows/: console.hpp  controls.hpp  io.hpp  registry.hpp  types.hpp  windows.hpp  windows_guarded.hpp
notes/: cpu_extensions.md
project/bluecycle/: CMakeLists.txt
project/bluecycle/src/: main.cpp
project/bluelib/: CMakeLists.txt
project/bluelib/inc/blue/: bitwise.hpp  comparesearch.hpp  concepts.hpp  debug.hpp  error.hpp  io.hpp  log.hpp  lut.hpp  memory.hpp  memory_exit.hpp  sal.hpp  timestamp.hpp  types.hpp  wave.hpp
project/bluelib/inc/blue/windows/: console.hpp  controls.hpp  io.hpp  registry.hpp  types.hpp
project/bluemetric/: CMakeLists.txt
project/blueunit/: CMakeLists.txt
project/measure/: CMakeLists.txt
project/measure/src/: main.cpp
project/test/: CMakeLists.txt
project/test/src/: main.cpp
